# danul

./: CMakeLists.txt  README.md  maain.cpp  лаба.txt
